Removing row to fix text overflow

--- a/css/barebones.css
+++ b/css/barebones.css
@@ -298,3 +298,7 @@ main .row {
         width: 98%;
     }
 }
+
+.tos {
+    word-wrap: normal;
+}
